<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notesCardBody">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/toolbar"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_make_note"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/make_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/check_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/add_check_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/add_new_check_list_image_view"
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/add_new_check_list_check_box"
                    android:layout_gravity="center"
                    android:text="@string/list_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/make_note_detail"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:layout_margin="10dp"
                    android:lines="3"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_my_calendar"/>
            <TextView
                android:id="@+id/date_text_view_make_note"
                android:layout_gravity="center"
                android:text="@string/NO_DATE"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/time_text_view_make_note"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/NO_TIME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/delete_make_note"
                android:layout_width="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:alpha="0.08"
                android:background="@color/notesCardBody"
                android:src="@android:drawable/ic_delete"
                android:layout_height="wrap_content" />



        </LinearLayout>







    </LinearLayout>

</ScrollView>